atualização do commit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 
 <body>
     <section id="welcome-section">
-        <h1> Hey I am Renessa</h1>
+        <h1>
+            Hey I am Renessa
+        </h1>
+        <p>
+            a web developer
+        </p>
+    </section>
+
+    <section id="projects" class="project-tile">
 
     </section>
 </body>
