--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 </head>
 
 <body>
+    <nav id="nav-bar" class="nav">
+        <ul class="navlink">
+            <a href="#Wlcome-section">
+                <li>About</li>
+            </a>
+            <a href="#Work">
+                <li>Work</li>
+            </a>
+            <a href="#Contact">
+                <li>Contact</li>
+            </a>
+        </ul>
+
+    </nav>
     <section id="welcome-section">
         <h1>
             Hey I am Renessa
@@ -19,8 +33,28 @@
         </p>
     </section>
 
-    <section id="projects" class="project-tile">
+    <section id="projects">
+        <h2>These are some of my projects</h2>
+        <div>
+            <a href="https://graceful-axolotl-d543bb.netlify.app/" target="_blank" class="project-tile">
+                <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"
+                    alt="project">
+                <p class="project-title">
+                    <span class="code">&lt;</span>
+                    Tribute Page
+                    <span class="code">/&gt;</span>
+                </p>
+            </a>
 
+            <a href="https://ornate-tartufo-8beff8.netlify.app/" target="_blank" class="project-tile">
+                <img class="project-image" src="">
+                <p class="project-tile">
+                    <span class="code"></span>
+
+                </p>
+            </a>
+
+        </div>
     </section>
 </body>
 
