--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Build-a-Personal-Portfolio-Webpage </title>
+    <title>Build-a-Personal-Portfolio-Webpage</title>
 </head>
 
 <body>
-    <nav id="nav-bar" class="nav">
+    <nav id="navbar" class="nav">
         <ul class="navlink">
-            <a href="#Wlcome-section">
+            <a href="#welcome-section">
                 <li>About</li>
             </a>
             <a href="#Work">
@@ -22,8 +22,8 @@
                 <li>Contact</li>
             </a>
         </ul>
-
     </nav>
+
     <section id="welcome-section">
         <h1>
             Hey I am Renessa
@@ -47,14 +47,49 @@
             </a>
 
             <a href="https://ornate-tartufo-8beff8.netlify.app/" target="_blank" class="project-tile">
-                <img class="project-image" src="">
+                <img class="project-image" src="" alt="project">
                 <p class="project-tile">
-                    <span class="code"></span>
+                    <span class="code">&lt;</span>
+                    Js Document
+                    <span class="code">/&gt;</span>
+                </p>+
+            </a>
 
+            <a href="https://projetositeandroid.netlify.app" target="_blank" class="project-tile">
+                <img class="project-image" src="" alt="project">
+                <p class="project-title">
+                    <span class="code">&lt;</span>
+                    Projeto Android
+                    <span class="code">/&gt;</span>
                 </p>
             </a>
 
+            <a href="https://serene-begonia-b0b530.netlify.app" target="_blank" class="project-tile">
+                <img class="project-image" src="" alt="project">
+                <p class="project-title">
+                    <span class="code">&lt;</span>
+                    Suvery Form
+                    <span class="code">/&gt;</span>
+                </p>
+            </a>
+
+            <a href="https://dreamy-churros-dda05b.netlify.app" target="_blank" class="project-tile">
+                <img class="project-image" src="" alt="project">
+                <p class="project-title">
+                    <span class="code">&lt;</span>
+                    Product Landing
+                    <span class="code">/&gt;</span>
+                </p>
+            </a>
         </div>
+    </section>
+
+    <section id="contact">
+        <h2>Let's work together...</h2>
+        <p>How do you take your coffee?</p>
+        
+
+
     </section>
 </body>
 
