--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Build-a-Personal-Portfolio-Webpage</title>
 </head>
 
+
+<!--barra de navegação -->
 <body>
     <nav id="navbar" class="nav">
         <ul class="navlink">
@@ -24,6 +26,7 @@
         </ul>
     </nav>
 
+    <!-- Primeira seção, apresentação -->
     <section id="welcome-section">
         <h1>
             Hey I am Renessa
@@ -33,6 +36,7 @@
         </p>
     </section>
 
+    <!-- Segunda seção, meus projetos -->
     <section id="projects">
         <h2>These are some of my projects</h2>
         <div>
@@ -84,12 +88,11 @@
         </div>
     </section>
 
+    <!-- Terceira e última seção, meus contatos -->
     <section id="contact">
         <h2>Let's work together...</h2>
         <p>How do you take your coffee?</p>
-        
-
-
+        <a href="" id="profile-link" target="_blank"> </a>
     </section>
 </body>
 
