--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 
 <!--barra de navegação -->
+
 <body>
     <nav id="navbar" class="nav">
         <ul class="navlink">
@@ -90,9 +91,44 @@
 
     <!-- Terceira e última seção, meus contatos -->
     <section id="contact">
-        <h2>Let's work together...</h2>
-        <p>How do you take your coffee?</p>
-        <a href="" id="profile-link" target="_blank"> </a>
+
+        <div>
+            <h2>Let's work together...</h2>
+            <p>How do you take your coffee?</p>
+        </div>
+
+        <div class="link-contats">
+            <a href="https://www.linkedin.com/in/renessa-cerqueira/" target="_blank">
+                <i class="fa-brands fa-linkedin">::before</i>
+                Linkedin
+            </a>
+
+            <a href="" id="profile-link" target="_blank">
+                <i>::before</i>
+                GitHub
+            </a>
+
+            <a href="" target="_blank">
+                <i>::before</i>
+                Whatsapp
+            </a>
+
+            <a href="" target="_blank">
+                <i>::before</i>
+                Gmail
+            </a>
+
+            <a href="" target="_blank">
+                <i>::before</i>
+                Whatsapp
+            </a>
+
+            <a href="" target="_blank">
+                <i>::before</i>
+                Twitter
+            </a>
+
+        </div>
     </section>
 </body>
 
