implementação do footer

--- a/index.html
+++ b/index.html
@@ -127,9 +127,18 @@
                 <i>::before</i>
                 Twitter
             </a>
-
         </div>
     </section>
+
+    <footer>
+        <p>
+            **This is just a fake portfolio. All the projects and contact details given are not real.
+        </p>
+        © Created for freeCodeCamp 
+        <p>
+
+        </p>
+    </footer>
 </body>
 
 </html>
