--- a/index.html
+++ b/index.html
@@ -99,27 +99,27 @@
 
         <div class="link-contats">
             <a href="https://www.linkedin.com/in/renessa-cerqueira/" target="_blank">
-                <i class="fa-brands fa-linkedin">::before</i>
+                <i class="fa-brands fa-linkedin"></i>
                 Linkedin
             </a>
 
             <a href="" id="profile-link" target="_blank">
-                <i>::before</i>
+                <i></i>
                 GitHub
             </a>
 
             <a href="" target="_blank">
-                <i>::before</i>
+                <i></i>
                 Whatsapp
             </a>
 
             <a href="" target="_blank">
-                <i>::before</i>
+                <i></i>
                 Gmail
             </a>
 
             <a href="" target="_blank">
-                <i>::before</i>
+                <i></i>
                 Whatsapp
             </a>
 
