--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/8a14d977a1.js" crossorigin="anonymous"></script>
     <title>Build-a-Personal-Portfolio-Webpage</title>
 </head>
 
@@ -104,28 +105,18 @@
             </a>
 
             <a href="" id="profile-link" target="_blank">
-                <i></i>
+                <i class="fa-brands fa-github"></i>
                 GitHub
             </a>
 
             <a href="" target="_blank">
-                <i></i>
-                Whatsapp
+                <i class="fa-solid fa-phone"></i>
+                Telefone
             </a>
 
             <a href="" target="_blank">
-                <i></i>
+                <i class="fa-solid fa-envelope"></i>
                 Gmail
-            </a>
-
-            <a href="" target="_blank">
-                <i></i>
-                Whatsapp
-            </a>
-
-            <a href="" target="_blank">
-                <i>::before</i>
-                Twitter
             </a>
         </div>
     </section>
