--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
                 Linkedin
             </a>
 
-            <a href="" id="profile-link" target="_blank">
+            <a href="https://github.com/srenessa" id="profile-link" target="_blank">
                 <i class="fa-brands fa-github"></i>
                 GitHub
             </a>
 
-            <a href="" target="_blank">
+            <a href="71996946076" target="_blank">
                 <i class="fa-solid fa-phone"></i>
                 Telefone
             </a>
