--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </a>
 
             <a href="https://ornate-tartufo-8beff8.netlify.app/" target="_blank" class="project-tile">
-                <img class="project-image" src="" alt="project">
+                <img class="project-image" src="img/projet-dois.png" alt="project">
                 <p class="project-tile">
                     <span class="code">&lt;</span>
                     Js Document
@@ -62,7 +62,7 @@
             </a>
 
             <a href="https://projetositeandroid.netlify.app" target="_blank" class="project-tile">
-                <img class="project-image" src="" alt="project">
+                <img class="project-image" src="img/projet-tres.png" alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
                     Projeto Android
@@ -71,7 +71,7 @@
             </a>
 
             <a href="https://serene-begonia-b0b530.netlify.app" target="_blank" class="project-tile">
-                <img class="project-image" src="" alt="project">
+                <img class="project-image" src="img/projet-quatro.png" alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
                     Suvery Form
@@ -80,7 +80,7 @@
             </a>
 
             <a href="https://dreamy-churros-dda05b.netlify.app" target="_blank" class="project-tile">
-                <img class="project-image" src="" alt="project">
+                <img class="project-image" src="img/projet-cinco.png" alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
                     Product Landing
