--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2>These are some of my projects</h2>
         <div>
             <a href="https://graceful-axolotl-d543bb.netlify.app/" target="_blank" class="project-tile">
-                <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"
+                <img class="project-image" src="img/projet-um.png"
                     alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
@@ -53,7 +53,7 @@
             </a>
 
             <a href="https://ornate-tartufo-8beff8.netlify.app/" target="_blank" class="project-tile">
-                <img class="project-image" src="img/projet-dois.png" alt="project">
+                <img class="project-image" src="img/projeto-dois.png" alt="project">
                 <p class="project-tile">
                     <span class="code">&lt;</span>
                     Js Document
@@ -62,7 +62,7 @@
             </a>
 
             <a href="https://projetositeandroid.netlify.app" target="_blank" class="project-tile">
-                <img class="project-image" src="img/projet-tres.png" alt="project">
+                <img class="project-image" src="img/projeto-tres.png" alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
                     Projeto Android
@@ -71,7 +71,7 @@
             </a>
 
             <a href="https://serene-begonia-b0b530.netlify.app" target="_blank" class="project-tile">
-                <img class="project-image" src="img/projet-quatro.png" alt="project">
+                <img class="project-image" src="img/projeto-quatro.png" alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
                     Suvery Form
@@ -80,7 +80,7 @@
             </a>
 
             <a href="https://dreamy-churros-dda05b.netlify.app" target="_blank" class="project-tile">
-                <img class="project-image" src="img/projet-cinco.png" alt="project">
+                <img class="project-image" src="img/projeto-cinco.png" alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
                     Product Landing
