--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 
     <footer>
         <p>
-            **This is just a fake portfolio. All the projects and contact details given are not real.
+            Handcrafted by me
         </p>
-        © Created for freeCodeCamp 
+        © Renessa Cerqueira
         <p>
 
         </p>
