seção um finalizada

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <p>
             a web developer
         </p>
+        <img src="https://mattfarley.ca/img/mf-avatar.svg" alt="">
     </section>
 
     <!-- Segunda seção, meus projetos -->
