--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     <!-- Primeira seção, apresentação -->
     <section id="welcome-section">
         <h1>
-            Hey I am Renessa
+            Olá, eu sou Renessa Cerqueira:)
         </h1>
         <p>
-            a web developer
+            Desenvolvedora Front-End
         </p>
-        <img src="https://mattfarley.ca/img/mf-avatar.svg" alt="">
+        <img src="img/3657664.jpg" width="300px" class="img-secao-um">
     </section>
 
     <!-- Segunda seção, meus projetos -->
@@ -45,8 +45,7 @@
         <h2>These are some of my projects</h2>
         <div>
             <a href="https://graceful-axolotl-d543bb.netlify.app/" target="_blank" class="project-tile">
-                <img class="project-image" src="img/projet-um.png"
-                    alt="project">
+                <img class="project-image" src="img/projet-um.png" alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
                     Tribute Page
