--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Patrick+Hand&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,7 +38,7 @@
         <p>
             Desenvolvedora Front-End
         </p>
-        <img src="img/3657664.jpg" width="450px" class="img-secao-um">
+        <img src="img/3657664.jpg" width="500px" class="img-secao-um">
     </section>
 
     <!-- Segunda seção, meus projetos -->
