imagem  de fundo inserida

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <!--barra de navegação -->
 
 <body>
+
     <nav id="navbar" class="nav">
+        <!--<img src="img/4.png" width="100px">-->
         <ul class="navlink">
             <a href="#welcome-section">
                 <li>About</li>
