--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Primeira seção, apresentação -->
     <section id="welcome-section">
         <h1>
-            Olá, eu sou Renessa Cerqueira:)
+            Olá, <br> eu sou Renessa Cerqueira, <br>web Developer
         </h1>
         <p>
             Desenvolvedora Front-End
