--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Patrick+Hand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Patrick+Hand&display=swap"
+        rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -46,8 +47,8 @@
     <!-- Segunda seção, meus projetos -->
     <section id="projects">
         <h2>These are some of my projects</h2>
-        <div>
-            <a href="https://graceful-axolotl-d543bb.netlify.app/" target="_blank" class="project-tile">
+        <div class="projects-grid">
+            <!-- <a href="https://graceful-axolotl-d543bb.netlify.app/" target="_blank" class="project-tile">
                 <img class="project-image" src="img/projet-um.png" alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
@@ -55,7 +56,7 @@
                     <span class="code">/&gt;</span>
                 </p>
             </a>
-
+        -->
             <a href="https://ornate-tartufo-8beff8.netlify.app/" target="_blank" class="project-tile">
                 <img class="project-image" src="img/projeto-dois.png" alt="project">
                 <p class="project-tile">
