--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section id="projects">
         <h2>These are some of my projects</h2>
         <div class="projects-grid">
-            <!-- <a href="https://graceful-axolotl-d543bb.netlify.app/" target="_blank" class="project-tile">
+            <a href="https://graceful-axolotl-d543bb.netlify.app/" target="_blank" class="project-tile">
                 <img class="project-image" src="img/projet-um.png" alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
@@ -56,7 +56,7 @@
                     <span class="code">/&gt;</span>
                 </p>
             </a>
-        -->
+        
             <a href="https://ornate-tartufo-8beff8.netlify.app/" target="_blank" class="project-tile">
                 <img class="project-image" src="img/projeto-dois.png" alt="project">
                 <p class="project-tile">
