--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         
             <a href="https://ornate-tartufo-8beff8.netlify.app/" target="_blank" class="project-tile">
                 <img class="project-image" src="img/projeto-dois.png" alt="project">
-                <p class="project-tile">
+                <p class="project-title">
                     <span class="code">&lt;</span>
                     Js Document
                     <span class="code">/&gt;</span>
