--- a/index.html
+++ b/index.html
@@ -51,45 +51,55 @@
             <a href="https://graceful-axolotl-d543bb.netlify.app/" target="_blank" class="project-tile">
                 <img class="project-image" src="img/projet-um.png" alt="project">
                 <p class="project-title">
+                    <div class="quadrado">
                     <span class="code">&lt;</span>
                     Tribute Page
                     <span class="code">/&gt;</span>
+                    </div>
                 </p>
             </a>
         
             <a href="https://ornate-tartufo-8beff8.netlify.app/" target="_blank" class="project-tile">
                 <img class="project-image" src="img/projeto-dois.png" alt="project">
                 <p class="project-title">
+                    <div class="quadrado">
                     <span class="code">&lt;</span>
                     Js Document
                     <span class="code">/&gt;</span>
+                    </div>
                 </p>
             </a>
 
             <a href="https://projetositeandroid.netlify.app" target="_blank" class="project-tile">
                 <img class="project-image" src="img/projeto-tres.png" alt="project">
                 <p class="project-title">
+                    <div class="quadrado">
                     <span class="code">&lt;</span>
                     Projeto Android
                     <span class="code">/&gt;</span>
+                    </div>
                 </p>
             </a>
 
             <a href="https://serene-begonia-b0b530.netlify.app" target="_blank" class="project-tile">
                 <img class="project-image" src="img/projeto-quatro.png" alt="project">
                 <p class="project-title">
+                    <div class="quadrado">
                     <span class="code">&lt;</span>
                     Suvery Form
                     <span class="code">/&gt;</span>
+                    </div>
                 </p>
             </a>
 
             <a href="https://dreamy-churros-dda05b.netlify.app" target="_blank" class="project-tile">
                 <img class="project-image" src="img/projeto-cinco.png" alt="project">
                 <p class="project-title">
+                    <div class="quadrado">
                     <span class="code">&lt;</span>
                     Product Landing
                     <span class="code">/&gt;</span>
+                </div>
                 </p>
             </a>
         </div>
