--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 <body>
 
     <nav id="navbar" class="nav">
-        <!--<img src="img/4.png" width="100px">-->
         <ul class="navlink">
             <a href="#welcome-section">
                 <li>About</li>
@@ -41,7 +40,12 @@
         <p>
             Desenvolvedora Front-End
         </p>
-        <img src="img/3657664.jpg" width="500px" class="img-secao-um">
+        <div id="img-um">
+            <img src="img/Coding-pana.png" width="500px" class="img-secao-um">
+        </div>
+        <div id="img-dois">
+            <img src="img/Portfólio web.png" width="100%" class="img-secao-dois">
+        </div>
     </section>
 
     <!-- Segunda seção, meus projetos -->
@@ -50,57 +54,57 @@
         <div class="projects-grid">
             <a href="https://graceful-axolotl-d543bb.netlify.app/" target="_blank" class="project-tile">
                 <img class="project-image" src="img/projet-um.png" alt="project">
-                <p class="project-title">
-                    <div class="quadrado">
-                    <span class="code">&lt;</span>
-                    Tribute Page
-                    <span class="code">/&gt;</span>
-                    </div>
-                </p>
+                <div class="div-retangulo">
+                    <p class="descricao">
+                        <span class="code">&lt;</span>
+                        Tribute Page
+                        <span class="code">/&gt;</span>
+                    </p>
+                </div>
             </a>
-        
+
             <a href="https://ornate-tartufo-8beff8.netlify.app/" target="_blank" class="project-tile">
                 <img class="project-image" src="img/projeto-dois.png" alt="project">
-                <p class="project-title">
-                    <div class="quadrado">
-                    <span class="code">&lt;</span>
-                    Js Document
-                    <span class="code">/&gt;</span>
-                    </div>
-                </p>
+                <div class="div-retangulo">
+                    <p class="descricao">
+                        <span class="code">&lt;</span>
+                        Js Document
+                        <span class="code">/&gt;</span>
+                    </p>
+                </div>
             </a>
 
             <a href="https://projetositeandroid.netlify.app" target="_blank" class="project-tile">
                 <img class="project-image" src="img/projeto-tres.png" alt="project">
-                <p class="project-title">
-                    <div class="quadrado">
-                    <span class="code">&lt;</span>
-                    Projeto Android
-                    <span class="code">/&gt;</span>
-                    </div>
-                </p>
+                <div class="div-retangulo">
+                    <p class="descricao">
+                        <span class="code">&lt;</span>
+                        Projeto Android
+                        <span class="code">/&gt;</span>
+                    </p>
+                </div>
             </a>
 
             <a href="https://serene-begonia-b0b530.netlify.app" target="_blank" class="project-tile">
                 <img class="project-image" src="img/projeto-quatro.png" alt="project">
-                <p class="project-title">
-                    <div class="quadrado">
-                    <span class="code">&lt;</span>
-                    Suvery Form
-                    <span class="code">/&gt;</span>
-                    </div>
-                </p>
+                <div class="div-retangulo">
+                    <p class="descricao">
+                        <span class="code">&lt;</span>
+                        Suvery Form
+                        <span class="code">/&gt;</span>
+                    </p>
+                </div>
             </a>
 
             <a href="https://dreamy-churros-dda05b.netlify.app" target="_blank" class="project-tile">
                 <img class="project-image" src="img/projeto-cinco.png" alt="project">
-                <p class="project-title">
-                    <div class="quadrado">
-                    <span class="code">&lt;</span>
-                    Product Landing
-                    <span class="code">/&gt;</span>
+                <div class="div-retangulo">
+                    <p class="descricao">
+                        <span class="code">&lt;</span>
+                        Product Landing
+                        <span class="code">/&gt;</span>
+                    <p>
                 </div>
-                </p>
             </a>
         </div>
     </section>
