--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Patrick+Hand&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,13 +37,13 @@
     <!-- Primeira seção, apresentação -->
     <section id="welcome-section">
         <h1>
-            Olá, <br> eu sou Renessa Cerqueira, <br>web Developer
+            Olá, <br> eu sou Renessa Cerqueira! =)<br>
         </h1>
         <p>
-            Desenvolvedora Front-End
+            Desenvolvedora Front-End<br><br>
         </p>
         <div id="img-um">
-            <img src="img/Coding-pana.png" width="500px" class="img-secao-um">
+            <img src="img/Coding-pana.png" width="440px" class="img-secao-um">
         </div>
         <div id="img-dois">
             <img src="img/Portfólio web.png" width="100%" class="img-secao-dois">
