atualização parte dois

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 
     <!-- Primeira seção, apresentação -->
     <section id="welcome-section">
-        <h1>
+        <h1 class="typing.animation">
             Olá, <br> eu sou Renessa Cerqueira! =)<br>
         </h1>
         <p>
             Desenvolvedora Front-End<br><br>
         </p>
         <div id="img-um">
-            <img src="img/Coding-pana.png" width="440px" class="img-secao-um">
+            <img src="img/Coding-pana.png" width="420px" class="img-secao-um">
         </div>
         <div id="img-dois">
             <img src="img/Portfólio web.png" width="100%" class="img-secao-dois">
@@ -55,7 +55,7 @@
         <h2>These are some of my projects</h2>
         <div class="projects-grid">
             <a href="https://graceful-axolotl-d543bb.netlify.app/" target="_blank" class="project-tile">
-                <img class="project-image" src="img/projet-um.png" alt="project">
+                    <img class="project-image" src="img/projet-um.png"  alt="project">
                 <div class="div-retangulo">
                     <p class="descricao">
                         <span class="code">&lt;</span>
@@ -114,12 +114,12 @@
     <!-- Terceira e última seção, meus contatos -->
     <section id="contact">
 
-        <div>
+        <div id="secao-tres">
             <h2>Let's work together...</h2>
             <p>How do you take your coffee?</p>
         </div>
 
-        <div class="link-contats">
+        <div id="link-contats">
             <a href="https://www.linkedin.com/in/renessa-cerqueira/" target="_blank">
                 <i class="fa-brands fa-linkedin"></i>
                 Linkedin
@@ -142,7 +142,8 @@
         </div>
     </section>
 
-    <footer>
+    <footer id="footer">
+        <div class="linha-footer" ></div>
         <p>
             Handcrafted by me
         </p>
