--- a/index.html
+++ b/index.html
@@ -54,8 +54,23 @@
     <section id="projects">
         <h2>These are some of my projects</h2>
         <div class="projects-grid">
-            <a href="https://graceful-axolotl-d543bb.netlify.app/" target="_blank" class="project-tile">
-                    <img class="project-image" src="img/projet-um.png"  alt="project">
+
+            <div>
+                <img class="project-image" src="img/projet-um.png" alt="project">
+
+                <div class="div-retangulo">
+                    <a href="https://graceful-axolotl-d543bb.netlify.app/" target="_blank" class="project-tile">
+                        <p class="descricao">
+                            <span class="code">&lt;</span>
+                            Tribute Page
+                            <span class="code">/&gt;</span>
+                        </p>
+                    </a>
+                </div>
+            </div>
+
+            <!-- <a href="https://graceful-axolotl-d543bb.netlify.app/" target="_blank" class="project-tile">
+                <img class="project-image" src="img/projet-um.png" alt="project">
                 <div class="div-retangulo">
                     <p class="descricao">
                         <span class="code">&lt;</span>
@@ -63,7 +78,7 @@
                         <span class="code">/&gt;</span>
                     </p>
                 </div>
-            </a>
+            </a> -->
 
             <a href="https://ornate-tartufo-8beff8.netlify.app/" target="_blank" class="project-tile">
                 <img class="project-image" src="img/projeto-dois.png" alt="project">
@@ -143,7 +158,7 @@
     </section>
 
     <footer id="footer">
-        <div class="linha-footer" ></div>
+        <div class="linha-footer"></div>
         <p>
             Handcrafted by me
         </p>
