--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <h2>These are some of my projects</h2>
         <div class="projects-grid">
 
+            <!-- imagem um ok-->
             <div>
                 <img class="project-image" src="img/projet-um.png" alt="project">
 
@@ -69,60 +70,63 @@
                 </div>
             </div>
 
-            <!-- <a href="https://graceful-axolotl-d543bb.netlify.app/" target="_blank" class="project-tile">
-                <img class="project-image" src="img/projet-um.png" alt="project">
-                <div class="div-retangulo">
-                    <p class="descricao">
-                        <span class="code">&lt;</span>
-                        Tribute Page
-                        <span class="code">/&gt;</span>
-                    </p>
-                </div>
-            </a> -->
+            <!-- imagem dois ok-->
+            <div>
+                <img src="project-image" src="img/projet-dois.png" alt="project">
 
-            <a href="https://ornate-tartufo-8beff8.netlify.app/" target="_blank" class="project-tile">
-                <img class="project-image" src="img/projeto-dois.png" alt="project">
                 <div class="div-retangulo">
-                    <p class="descricao">
-                        <span class="code">&lt;</span>
-                        Js Document
-                        <span class="code">/&gt;</span>
-                    </p>
+                    <a href="https://ornate-tartufo-8beff8.netlify.app/" target="_blank" class="project-tile">
+                        <p class="descricao">
+                            <span class="code">&lt;</span>
+                            Js Document
+                            <span class="code">/&gt;</span>
+                        </p>
+                    </a>
                 </div>
-            </a>
+            </div>
 
-            <a href="https://projetositeandroid.netlify.app" target="_blank" class="project-tile">
+
+            <div>
                 <img class="project-image" src="img/projeto-tres.png" alt="project">
-                <div class="div-retangulo">
-                    <p class="descricao">
-                        <span class="code">&lt;</span>
-                        Projeto Android
-                        <span class="code">/&gt;</span>
-                    </p>
-                </div>
-            </a>
 
-            <a href="https://serene-begonia-b0b530.netlify.app" target="_blank" class="project-tile">
-                <img class="project-image" src="img/projeto-quatro.png" alt="project">
                 <div class="div-retangulo">
+                    <a href="https://projetositeandroid.netlify.app" target="_blank" class="project-tile">
+                        <p class="descricao">
+                            <span class="code">&lt;</span>
+                            Projeto Android
+                            <span class="code">/&gt;</span>
+                        </p>
+                </div>
+                </a>
+            </div>
+
+            <div>
+                <img class="project-image" src="img/projeto-quatro.png" alt="project">
+
+                <div class="div-retangulo">
+                    <a href="https://serene-begonia-b0b530.netlify.app" target="_blank" class="project-tile"></a>
                     <p class="descricao">
                         <span class="code">&lt;</span>
                         Suvery Form
                         <span class="code">/&gt;</span>
                     </p>
                 </div>
-            </a>
+                </a>
+            </div>
 
-            <a href="https://dreamy-churros-dda05b.netlify.app" target="_blank" class="project-tile">
+            <div>
                 <img class="project-image" src="img/projeto-cinco.png" alt="project">
+
                 <div class="div-retangulo">
-                    <p class="descricao">
-                        <span class="code">&lt;</span>
-                        Product Landing
-                        <span class="code">/&gt;</span>
-                    <p>
+                    <a href="https://dreamy-churros-dda05b.netlify.app" target="_blank" class="project-tile">
+                        <p class="descricao">
+                            <span class="code">&lt;</span>
+                            Product Landing
+                            <span class="code">/&gt;</span>
+                            <p>
                 </div>
-            </a>
+                </a>
+            </div>
         </div>
     </section>
 
