imagem dois com problema

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
             </div>
 
-            <!-- imagem dois ok-->
+            <!-- imagem dois com problema-->
             <div>
                 <img src="project-image" src="img/projet-dois.png" alt="project">
 
