--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
             <!-- imagem um ok-->
             <div>
-                <img class="project-image" src="img/projet-um.png" alt="project">
+                <img class="project-image" src="img/projeto-um.png" alt="project">
 
                 <div class="div-retangulo">
                     <a href="https://graceful-axolotl-d543bb.netlify.app/" target="_blank" class="project-tile">
@@ -72,7 +72,7 @@
 
             <!-- imagem dois com problema-->
             <div>
-                <img src="project-image" src="img/projet-dois.png" alt="project">
+                <img class="project-image" src="img/projeto-dois.png" alt="project">
 
                 <div class="div-retangulo">
                     <a href="https://ornate-tartufo-8beff8.netlify.app/" target="_blank" class="project-tile">
@@ -84,7 +84,6 @@
                     </a>
                 </div>
             </div>
-
 
             <div>
                 <img class="project-image" src="img/projeto-tres.png" alt="project">
