imagem dois atualizada

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2>These are some of my projects</h2>
         <div class="projects-grid">
 
-            <!-- imagem um ok-->
+            <!-- imagem um-->
             <div>
                 <img class="project-image" src="img/projeto-um.png" alt="project">
 
@@ -70,7 +70,7 @@
                 </div>
             </div>
 
-            <!-- imagem dois com problema-->
+            <!-- imagem dois-->
             <div>
                 <img class="project-image" src="img/projeto-dois.png" alt="project">
 
@@ -85,6 +85,7 @@
                 </div>
             </div>
 
+            <!-- imagem tres -->
             <div>
                 <img class="project-image" src="img/projeto-tres.png" alt="project">
 
@@ -99,6 +100,7 @@
                 </a>
             </div>
 
+            <!-- imagem quatro -->
             <div>
                 <img class="project-image" src="img/projeto-quatro.png" alt="project">
 
@@ -112,7 +114,8 @@
                 </div>
                 </a>
             </div>
-
+            
+            <!-- imagem cinco -->
             <div>
                 <img class="project-image" src="img/projeto-cinco.png" alt="project">
 
