--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </div>
                 </a>
             </div>
-            
+
             <!-- imagem cinco -->
             <div>
                 <img class="project-image" src="img/projeto-cinco.png" alt="project">
@@ -140,37 +140,36 @@
             <p>How do you take your coffee?</p>
         </div>
 
-        <div id="link-contats">
-            <a href="https://www.linkedin.com/in/renessa-cerqueira/" target="_blank">
-                <i class="fa-brands fa-linkedin"></i>
-                Linkedin
-            </a>
+        <div class="container-link">
+            <div class ="cont">
+                <a href="https://www.linkedin.com/in/renessa-cerqueira/" target="_blank">
+                    <i class="fa-brands fa-linkedin"></i>
+                    Linkedin
+                </a>
 
-            <a href="https://github.com/srenessa" id="profile-link" target="_blank">
-                <i class="fa-brands fa-github"></i>
-                GitHub
-            </a>
+                <a href="https://github.com/srenessa" id="profile-link" target="_blank">
+                    <i class="fa-brands fa-github"></i>
+                    GitHub
+                </a>
 
-            <a href="71996946076" target="_blank">
-                <i class="fa-solid fa-phone"></i>
-                Telefone
-            </a>
+                <a href="71996946076" target="_blank">
+                    <i class="fa-solid fa-phone"></i>
+                    Telefone
+                </a>
 
-            <a href="" target="_blank">
-                <i class="fa-solid fa-envelope"></i>
-                Gmail
-            </a>
+                <a href="" target="_blank">
+                    <i class="fa-solid fa-envelope"></i>
+                    Gmail
+                </a>
+            </div>
         </div>
     </section>
 
     <footer id="footer">
         <div class="linha-footer"></div>
         <p>
-            Handcrafted by me
-        </p>
-        © Renessa Cerqueira
-        <p>
-
+            Handcrafted by me <br>
+            © Renessa Cerqueira
         </p>
     </footer>
 </body>
