--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <!-- Segunda seção, meus projetos -->
     <section id="projects">
-        <h2>These are some of my projects</h2>
+        <h2>Esses são alguns dos meus projetos</h2>
         <div class="projects-grid">
 
             <!-- imagem um-->
