--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <a href="https://graceful-axolotl-d543bb.netlify.app/" target="_blank" class="project-tile">
                         <p class="descricao">
                             <span class="code">&lt;</span>
-                            Tribute Page
+                            Página de Homenagem 
                             <span class="code">/&gt;</span>
                         </p>
                     </a>
@@ -78,7 +78,7 @@
                     <a href="https://ornate-tartufo-8beff8.netlify.app/" target="_blank" class="project-tile">
                         <p class="descricao">
                             <span class="code">&lt;</span>
-                            Js Document
+                            Documento Java Script 
                             <span class="code">/&gt;</span>
                         </p>
                     </a>
@@ -105,10 +105,10 @@
                 <img class="project-image" src="img/projeto-quatro.png" alt="project">
 
                 <div class="div-retangulo">
-                    <a href="https://serene-begonia-b0b530.netlify.app" target="_blank" class="project-tile"></a>
+                    <a href="https://serene-begonia-b0b530.netlify.app" target="_blank" class="project-tile">
                     <p class="descricao">
                         <span class="code">&lt;</span>
-                        Suvery Form
+                        Formulário de Pesquisa
                         <span class="code">/&gt;</span>
                     </p>
                 </div>
