--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <a href="#welcome-section">
                 <li>About</li>
             </a>
-            <a href="#Work">
+            <a href="#projects">
                 <li>Work</li>
             </a>
-            <a href="#Contact">
+            <a href="#contact">
                 <li>Contact</li>
             </a>
         </ul>
