--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             Desenvolvedora Front-End<br><br>
         </p>
         <div id="img-um">
-            <img src="img/Coding-pana.png" width="420px" class="img-secao-um">
+            <img src="img/Coding-pana.png" class="img-secao-um">
         </div>
         <div id="img-dois">
             <img src="img/Portfólio web.png" width="100%" class="img-secao-dois">
@@ -56,8 +56,8 @@
         <div class="projects-grid">
 
             <!-- imagem um-->
-            <div>
-                <img class="project-image" src="img/projeto-um.png" alt="project">
+            <div class="project-image">
+                <img src="img/projeto-um.png" alt="project">
 
                 <div class="div-retangulo">
                     <a href="https://graceful-axolotl-d543bb.netlify.app/" target="_blank" class="project-tile">
@@ -71,8 +71,8 @@
             </div>
 
             <!-- imagem dois-->
-            <div>
-                <img class="project-image" src="img/projeto-dois.png" alt="project">
+            <div class="project-image">
+                <img src="img/projeto-dois.png" alt="project">
 
                 <div class="div-retangulo">
                     <a href="https://ornate-tartufo-8beff8.netlify.app/" target="_blank" class="project-tile">
@@ -86,8 +86,8 @@
             </div>
 
             <!-- imagem tres -->
-            <div>
-                <img class="project-image" src="img/projeto-tres.png" alt="project">
+            <div class="project-image">
+                <img src="img/projeto-tres.png" alt="project">
 
                 <div class="div-retangulo">
                     <a href="https://projetositeandroid.netlify.app" target="_blank" class="project-tile">
@@ -101,8 +101,8 @@
             </div>
 
             <!-- imagem quatro -->
-            <div>
-                <img class="project-image" src="img/projeto-quatro.png" alt="project">
+            <div class="project-image">
+                <img src="img/projeto-quatro.png" alt="project">
 
                 <div class="div-retangulo">
                     <a href="https://serene-begonia-b0b530.netlify.app" target="_blank" class="project-tile">
@@ -116,8 +116,8 @@
             </div>
 
             <!-- imagem cinco -->
-            <div>
-                <img class="project-image" src="img/projeto-cinco.png" alt="project">
+            <div class="project-image">
+                <img src="img/projeto-cinco.png" alt="project">
 
                 <div class="div-retangulo">
                     <a href="https://dreamy-churros-dda05b.netlify.app" target="_blank" class="project-tile">
