atualização do html

--- a/index.html
+++ b/index.html
@@ -33,17 +33,23 @@
             </a>
         </ul>
     </nav>
-
+ 
     <!-- Primeira seção, apresentação -->
     <section id="welcome-section">
-        <h1 class="typing.animation">
-            Olá, <br> eu sou Renessa Cerqueira! =)<br>
-        </h1>
-        <p>
-            Desenvolvedora Front-End<br><br>
-        </p>
-        <div id="img-um">
-            <img src="img/Coding-pana.png" class="img-secao-um">
+        <div class="coluna">
+            <div class="meuNome">
+                <h1 class="typing.animation">
+                    Olá, <br> eu sou Renessa Cerqueira! =)<br>
+                </h1>
+                <p>
+                    Desenvolvedora Front-End<br><br>
+                </p>
+           </div>
+           
+            <div id="img-um">
+                <img src="img/Coding-pana.png" width="420px" class="img-secao-um">
+            </div>
+    
         </div>
         <div id="img-dois">
             <img src="img/Portfólio web.png" width="100%" class="img-secao-dois">
@@ -57,7 +63,7 @@
 
             <!-- imagem um-->
             <div class="project-image">
-                <img src="img/projeto-um.png" alt="project">
+                <img  src="img/projeto-um.png" alt="project">
 
                 <div class="div-retangulo">
                     <a href="https://graceful-axolotl-d543bb.netlify.app/" target="_blank" class="project-tile">
@@ -72,7 +78,7 @@
 
             <!-- imagem dois-->
             <div class="project-image">
-                <img src="img/projeto-dois.png" alt="project">
+                <img  src="img/projeto-dois.png" alt="project">
 
                 <div class="div-retangulo">
                     <a href="https://ornate-tartufo-8beff8.netlify.app/" target="_blank" class="project-tile">
@@ -87,7 +93,7 @@
 
             <!-- imagem tres -->
             <div class="project-image">
-                <img src="img/projeto-tres.png" alt="project">
+                <img  src="img/projeto-tres.png" alt="project">
 
                 <div class="div-retangulo">
                     <a href="https://projetositeandroid.netlify.app" target="_blank" class="project-tile">
@@ -102,7 +108,7 @@
 
             <!-- imagem quatro -->
             <div class="project-image">
-                <img src="img/projeto-quatro.png" alt="project">
+                <img  src="img/projeto-quatro.png" alt="project">
 
                 <div class="div-retangulo">
                     <a href="https://serene-begonia-b0b530.netlify.app" target="_blank" class="project-tile">
@@ -117,7 +123,7 @@
 
             <!-- imagem cinco -->
             <div class="project-image">
-                <img src="img/projeto-cinco.png" alt="project">
+                <img  src="img/projeto-cinco.png" alt="project">
 
                 <div class="div-retangulo">
                     <a href="https://dreamy-churros-dda05b.netlify.app" target="_blank" class="project-tile">
