nome primeira página corrigido

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="coluna">
             <div class="meuNome">
                 <h1 class="typing.animation">
-                    Olá, <br> eu sou Renessa Cerqueira! =)<br>
+                    Olá, <br> eu sou Renessa Cerqueira!<br>
                 </h1>
                 <p>
                     Desenvolvedora Front-End<br><br>
