animação de digitar criada

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section id="welcome-section">
         <div class="coluna">
             <div class="meuNome">
-                <h1 class="typing.animation">
+                <h1 class="typing-animation">
                     Olá, <br> eu sou Renessa Cerqueira!<br>
                 </h1>
                 <p>
