responsividade parte 3 concluída

--- a/index.html
+++ b/index.html
@@ -148,25 +148,34 @@
 
         <div class="container-link">
             <div class="cont">
-                <a href="https://www.linkedin.com/in/renessa-cerqueira/" target="_blank">
-                    <i class="fa-brands fa-linkedin"></i>
-                    Linkedin
-                </a>
+                <div class="links-contatos">
+                    <a href="https://www.linkedin.com/in/renessa-cerqueira/" target="_blank">
+                        <i class="fa-brands fa-linkedin"></i>
+                        Linkedin
+                    </a>
+                </div>
 
-                <a href="https://github.com/srenessa" id="profile-link" target="_blank">
+                <div class="links-contatos">
+                    <a href="https://github.com/srenessa" id="profile-link" target="_blank">
                     <i class="fa-brands fa-github"></i>
-                    GitHub
-                </a>
+                        GitHub
+                    </a>
+                </div>
 
-                <a href="71996946076" target="_blank">
+                <div class="links-contatos">
+                    <a href="71996946076" target="_blank">
                     <i class="fa-solid fa-phone"></i>
-                    Telefone
-                </a>
+                        Telefone
+                    </a>
+                </div>
 
-                <a href="" target="_blank">
-                    <i class="fa-solid fa-envelope"></i>
-                    Gmail
-                </a>
+                <div class="links-contatos">
+                    <a href="" target="_blank">
+                        <i class="fa-solid fa-envelope"></i>
+                        Gmail
+                    </a>
+                </div>
+
             </div>
         </div>
     </section>
