--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Patrick+Hand&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Special+Elite&display=swap" rel="stylesheet">
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/8a14d977a1.js" crossorigin="anonymous"></script>
-    <title>Build-a-Personal-Portfolio-Webpage</title>
+    <title>Portfolio-Webpage</title>
 </head>
 
 
@@ -38,11 +39,12 @@
     <section id="welcome-section">
         <div class="coluna">
             <div class="meuNome">
+                <P class="nome">OLÁ, EU SOU</P>
                 <h1 class="typing-animation">
-                    Olá, <br> eu sou Renessa Cerqueira!<br>
+                    RENESSA CERQUEIRA=)
                 </h1>
-                <p>
-                    Desenvolvedora Front-End<br><br>
+                <p class="nome">
+                    DESENVOLVEDORA FRONT-END
                 </p>
             </div>
 
@@ -157,14 +159,14 @@
 
                 <div class="links-contatos">
                     <a href="https://github.com/srenessa" id="profile-link" target="_blank">
-                    <i class="fa-brands fa-github"></i>
+                        <i class="fa-brands fa-github"></i>
                         GitHub
                     </a>
                 </div>
 
                 <div class="links-contatos">
                     <a href="71996946076" target="_blank">
-                    <i class="fa-solid fa-phone"></i>
+                        <i class="fa-solid fa-phone"></i>
                         Telefone
                     </a>
                 </div>
