criação de novos id

--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
             <a href="#contact">
                 <li>Contact</li>
             </a>
-        </ul>
+        </ul>  
     </nav>
 
     <!-- Primeira seção, apresentação -->
     <section id="welcome-section">
         <div class="coluna">
             <div class="meuNome">
-                <P class="nome">OLÁ, EU SOU</P>
+                <P class="nome" id="texto-um">OLÁ, EU SOU</P>
                 <h1 class="typing-animation">
                     RENESSA CERQUEIRA=)
                 </h1>
-                <p class="nome">
+                <p class="nome" id="texto-dois">
                     DESENVOLVEDORA FRONT-END
                 </p>
             </div>
