seção um ajustada

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="meuNome">
                 <P class="nome" id="texto-um">OLÁ, EU SOU</P>
                 <h1 class="typing-animation">
-                    RENESSA CERQUEIRA=)
+                    RENESSA <br>CERQUEIRA
                 </h1>
                 <p class="nome" id="texto-dois">
                     DESENVOLVEDORA FRONT-END
