atualização do titulo seção dois

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- Segunda seção, meus projetos -->
     <section id="projects">
-        <h2>Esses são alguns dos meus projetos</h2>
+        <h2>ESSES SÃO ALGUNS DOS MEUS PROJETOS</h2>
         <div class="projects-grid">
 
             <!-- imagem um-->
