atualização do html

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="/css/style.css">image.png
     <link rel="stylesheet" href="/css/mobile.css">
-    <link rel="stylesheet" href="/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Patrick+Hand&display=swap"
         rel="stylesheet">
@@ -38,10 +38,10 @@
 
     <!-- Primeira seção, apresentação -->
     <section id="welcome-section">
-        <div class="coluna">
+        <div class="container-colunas">
             <div class="meuNome">
                 <P class="nome" id="texto-um">OLÁ, EU SOU</P>
-                <h1 class="typing-animation">
+                <h1>
                     RENESSA <br>CERQUEIRA
                 </h1>
                 <p class="nome" id="texto-dois">
